--- a/css/main.css
+++ b/css/main.css
@@ -6,6 +6,13 @@
     .h-test-s{
         visibility: hidden;
     }
+    .scroll-button{
+        visibility: hidden;
+    }
+    .dienst-img{
+        max-height: 240px;
+        overflow: hidden;
+    }
 }
 
 @media screen and (max-width: 480px) {
@@ -17,12 +24,19 @@
         font-size: 1.8rem;
         line-height: 1.0;
     }
+    .scroll-button{
+        visibility: hidden;
+    }
+    .dienst-img{
+        max-height: 240px;
+        overflow: hidden;
+    }
 }
 
 @media screen and (min-width: 480px) {
     .header-text{
         text-align: center; 
-        height: 70vh;
+        height: 73vh;
     }
     
     .h-test-s{
