--- a/css/main.css
+++ b/css/main.css
@@ -40,8 +40,7 @@ body {
 
 .header-image {
     width: 100%;
-    background-color: grey;
-    height: 47vw;
+    background-color: white;
 }
 
 .main-graph {
