--- a/css/main.css
+++ b/css/main.css
@@ -37,88 +37,201 @@ body {
     font-weight: bold;
 }
 
-.title {
-    width: 100%;
-    background-color: white;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+
+@media only screen and (max-width: 979px ) {
+
+    .title {
+        width: 100%;
+        background-color: white;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+    
+    .header-image {
+        width: 100%;
+        background-color: white;
+    }
+    
+    .main-graph {
+        width: 100%;
+        background-color: white;
+    }
+    
+    .button-section {
+        width: 100%;
+        margin: 10px 0px;
+        background-color: white;
+        height: 5%;
+    }
+    
+    .adress-info {
+        width: 100%;
+        background-color: white;
+    }
+    
+    .impressum {
+        width: 100%;
+        margin: 10px 0px;
+        background-color: white;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+    
+    .content-info {
+        width: 100%;
+        background-color: white;
+    }
+    
+    .inner-title-dark {
+        width: 85%;
+        margin: 10%;
+        background-color: white;
+        text-align: center;
+    }
+
+    .inner-title-light{
+        display: none;
+    }
+    
+    .inner-title-text {
+        font-size: 5.7vw;
+        margin: 0px;
+        color: black;
+    }
+    
+    .inner-main-graph {
+        margin: 2%;
+    }
+    
+    .inner-button-section {
+        margin: 0;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+    
+    .inner-adress-info {
+        padding: 2%;
+        text-align: center;
+        font-size: 4vw;
+    }
+    
+    .inner-content-info {
+        padding: 5%;
+        text-align: center;
+        font-size: 4vw;
+    }
+    
+    .inner-content-info-left {
+        padding: 1% 5%;
+        text-align: left;
+        font-size: 4vw;
+    }
+
+    .bg{
+        display: none;
+    }
+
+    .desktop-impressum{
+        display: none;
+    }
+
+    .inner-header-image-light{
+        display: none;
+    }
+
 }
 
-.header-image {
-    width: 100%;
-    background-color: white;
+@media only screen and (min-width: 980px ) {
+
+    body, html {
+        height: 100%;
+        margin: 0;
+      }
+
+    .bg {
+    /* The image used */
+    background-image: url("../images/bg.jpg");
+
+    /* Full height */
+    height: 100%; 
+
+    /* Center and scale the image nicely */
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    }
+
+
+
+
+
+
+
+
+
+
+    .inner-adress-info{
+        display: none;
+    }
+
+    .header-image{
+        display: none;
+    }
+
+    .button-section{
+        display: none;
+    }
+
+
+
+
+
+
+
+
+
+    .inner-title-dark {
+        display: none;
+    }
+
+    .inner-title-light{
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        width: 40%;
+
+        background-color: white;
+        text-align: center;
+    }
+
+    .impressum{
+        display: none;
+    }
+
+    .desktop-impressum{
+        position: fixed;
+        left: 0;
+        bottom: 0;
+        width: 100%;
+        background-color: rgb(255, 255, 255);
+        color: black;
+        text-align: center;
+        font-size: 1vw;
+    }
+
+    .desktop-impressum-button{
+        color: black;
+        padding: 10px 16px;
+        text-align: center;
+        text-decoration: none;
+        display: inline-block;
+    }
 }
 
-.main-graph {
-    width: 100%;
-    background-color: white;
+@media only screen and (min-width: 1260px ) {
+
 }
 
-.button-section {
-    width: 100%;
-    margin: 10px 0px;
-    background-color: white;
-    height: 5%;
-}
-
-.adress-info {
-    width: 100%;
-    background-color: white;
-}
-
-.impressum {
-    width: 100%;
-    margin: 10px 0px;
-    background-color: white;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.content-info {
-    width: 100%;
-    background-color: white;
-}
-
-.inner-title {
-    width: 85%;
-    margin: 10%;
-    background-color: white;
-    text-align: center;
-}
-
-.inner-title-text {
-    font-size: 5.7vw;
-    margin: 0px;
-    color: black;
-}
-
-.inner-main-graph {
-    margin: 2%;
-}
-
-.inner-button-section {
-    margin: 0;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.inner-adress-info {
-    padding: 2%;
-    text-align: center;
-    font-size: 4vw;
-}
-
-.inner-content-info {
-    padding: 5%;
-    text-align: center;
-    font-size: 4vw;
-}
-
-.inner-content-info-left {
-    padding: 1% 5%;
-    text-align: left;
-    font-size: 4vw;
-}
