--- a/css/main.css
+++ b/css/main.css
@@ -296,22 +296,19 @@ body {
     }
 
     .desktop-impressum{
-        position: fixed;
-        left: 0;
-        bottom: 0;
-        width: 100%;
-        background-color: rgb(255, 255, 255);
-        color: black;
+        color: white;
         text-align: center;
         font-size: 1vw;
     }
 
     .desktop-impressum-button{
-        color: black;
+        color: white;
         padding: 10px 16px;
         text-align: center;
         text-decoration: none;
         display: inline-block;
+        font-size: 2vw;
+        font-weight: bold;
     }
 
     .content-desktop{
@@ -335,7 +332,7 @@ body {
     }
 
     .inner-content-info-left-desktop {
-        padding: 13% 5%;
+        padding: 5% 5% 1% 5%;
         text-align: left;
         font-size: 0.9vw;
         color: #707070;
@@ -375,7 +372,22 @@ body {
         padding: 0% 20% 2% 20%;
         text-align: center;
         font-size: 0.9vw;
-        text-align: justify;
+        text-align: left;
+    }
+
+    #content {
+        position: absolute;
+        margin: auto;
+        top: 0;
+        right: 0;
+        bottom: 0;
+        left: 0;
+        width: 100px;
+        height: 100px;  
+    }
+
+    .kontakt-page{
+        
     }
 
 }
